--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-DATABASE_URL=
+VITE_BASE_URL=http://localhost:3000
+DATABASE_URL=postgres://postgres:5432@localhost:5432/better-admin
+BETTER_AUTH_SECRET=secret
+BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app
