--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 VITE_BASE_URL=http://localhost:3000
+VITE_APP_NAME=Better Admin
+VITE_SITE_TITLE=Better Admin
+VITE_SITE_DESCRIPTION=Better Admin is a powerful admin panel template built with React and Tailwind CSS.
+VITE_DEFAULT_LOCALE=en
+VITE_DEFAULT_THEME=light
 DATABASE_URL=postgres://postgres:5432@localhost:5432/better-admin
-BETTER_AUTH_SECRET=secret
+BETTER_AUTH_SECRET=K3eZWUAjfkhWLK2KPhGO6TEN2v5H4Jqj
 BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app
