feat: auth integration

--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ VITE_DEFAULT_THEME=light
 DATABASE_URL=postgres://postgres:5432@localhost:5432/better-admin
 BETTER_AUTH_SECRET=K3eZWUAjfkhWLK2KPhGO6TEN2v5H4Jqj
 BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
