--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
+    "ua-parser-js": "^2.0.3",
     "vaul": "^1.1.2",
     "vinxi": "^0.5.3",
     "vite-tsconfig-paths": "^5.1.4",
