--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/router-plugin": "^1.114.3",
     "@tanstack/zod-adapter": "^1.117.1",
+    "@types/js-cookie": "^3.0.6",
     "better-auth": "^1.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -68,6 +69,7 @@
     "drizzle-orm": "^0.43.1",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.476.0",
     "next-themes": "^0.4.6",
     "pg": "^8.15.6",
