--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@faker-js/faker": "^9.7.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
@@ -71,6 +72,8 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.476.0",
+    "motion": "^12.9.2",
+    "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "pg": "^8.15.6",
     "postgres": "^3.4.5",
