--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "motion": "^12.9.2",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
     "pg": "^8.15.6",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
