--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 MAIL_FROM=
 RESEND_API_KEY=
+S3_ENDPOINT=
+S3_PUBLIC_PATH=
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_REGION=
