--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-i18next": "^15.5.1",
+    "react-qr-code": "^2.0.15",
     "react-resizable-panels": "^2.1.8",
     "recharts": "^2.15.3",
     "resend": "^4.5.0",
